k8s/download/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: download
spec:
  selector:
    app: jackett
  ports:
  - name: http
    port: 9117
    targetPort: 9117
